# TP3_Left-4-Dead_G9

./: .gitignore  CMakeLists.txt  README.md  client_animation.cpp  client_animation.h  client_center.cpp  client_character.cpp  client_character.h  client_explotion.cpp  client_jumper.cpp  client_jumper.h  client_loopanimation.cpp  client_loopanimation.h  client_message.cpp  client_message.h  client_myenum.h  client_myrenderer.cpp  client_myrenderer.h  client_noloopanimation.cpp  client_noloopanimation.h  client_renderer.cpp  client_renderer.h  client_scenario.cpp  client_singleanimation.cpp  client_singleanimation.h  client_smoke.cpp  client_smoke.h  client_soldier1.cpp  client_soldier1.h  client_soldier1textures.cpp  client_soldier1textures.h  client_soldier2.cpp  client_soldier2.h  client_soldier3.cpp  client_soldier3.h  client_spear.cpp  client_spear.h  client_textureholder.cpp  client_textureholder.h  client_venom.cpp  (+15 more)
Client/: client_animation.cpp  client_center.cpp  client_center.h  client_character.cpp  client_character.h  client_client.cpp  client_client.h  client_jumper.cpp  client_jumper.h  client_main.cpp  client_message.cpp  client_myenum.h  client_noloopanimation.cpp  client_noloopanimation.h  client_parsing.cpp  client_parsing.h  client_protocol.cpp  client_protocol.h  client_singleanimation.h  client_soldier1.cpp  client_soldier1.h  client_soldier2.h  client_spear.cpp  client_spear.h  client_war1.h  client_war3.cpp  client_war3.h  client_war4.h  client_zombie.cpp  client_zombie.h  common_resolvererror.h
Server/: common_liberror.h  common_socket.cpp  server_allgames.cpp  server_allgames.h  server_allqueues.cpp  server_allqueues.h  server_client.cpp  server_client.h  server_codes.cpp  server_codes.h  server_game.cpp  server_game.h  server_gamelogic.cpp  server_gamelogic.h  server_listening.cpp  server_listening.h  server_main.cpp  server_message.cpp  server_message.h  server_protocol.cpp  server_protocol.h  server_queue.h  server_reciever.cpp  server_reciever.h  server_sender.cpp  server_sender.h  server_server.cpp  server_server.h  server_thread.h
client/include/: Client.h  GameUpdate.h  ProtocoloActions.h  ReceiverUpdate.h  SenderServer.h  StateTypes.h  UserAction.h  client.h  client_center.h  client_constants.h  client_explotion.h  client_jumper.h  client_loopanimation.h  client_myenum.h  client_myrenderer.h  client_noloopanimation.h  client_prueba.h  client_scenario.h  client_sdl_handler_event.h  client_server_reciever.h  client_singleanimation.h  client_smoke.h  client_soldier1.h  client_soldier2.h  client_soldier3.h  client_spear.h  client_venom.h  client_war2.h  client_witch.h  client_zombie.h  cliente_server_sender.h  game_update.h  (+5 more)
cliente/: client_message.cpp  client_message.h  client_myenum.h
common_libs/: CMakeLists.txt  common_liberror.cpp  common_liberror.h  common_queue.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_socket.cpp  common_socket.h  common_thread.h  evento_usuario.cpp  evento_usuario.h  inicio_partida.h  protocol.cpp  protocol.h  tipos_estado_enum.h
resources/: a.out  newpaths.txt  old_main.cpp  path_jumper  path_music  path_soldier1  path_soldier2  path_soldier3  path_spear  path_venom  path_war1_bright  path_war1_pale  path_war2_bright  path_war2_pale  path_war3_bright  path_war3_pale  path_war4_bright  path_war4_pale  path_witch  path_zombie  paths.txt  script.cpp
server/: test_arma.cpp
server_modelo/: CMakeLists.txt  arma.cpp  arma.h  estado_jugador.cpp  estado_jugador.h  estado_zombie.cpp  estado_zombie.h  generador_id.h  idf.cpp  juego.cpp  juego.h  lista_partida.cpp  lista_partida.h  lista_partidas.cpp  lista_partidas.h  partida.cpp  partida.h  personaje.cpp  personaje.h  scout.cpp  scout.h
server_start/: CMakeLists.txt  server_aceptador.cpp  server_aceptador.h  server_cliente_enum.h  server_cliente_handler.cpp  server_cliente_handler.h  server_main.cpp  server_protocolo.cpp  server_protocolo.h  server_reciever.cpp  server_reciever.h  server_sender.cpp  server_sender.h
(+175 files in other folders)
